--- a/academy-ninja-master-myAttempt/index.html
+++ b/academy-ninja-master-myAttempt/index.html
@@ -4,11 +4,18 @@
             <div id='character' style='position: absolute; top:100px; left:450px; background-image: url("img/down1.png"); width:59px; height:86px;'></div>
         </div>
         <script type="text/javascript">
-          var leftValue = 450, topValue = 100;
+          var leftValue = 450, topValue = 100, direction = 'down', step = 1;
+
 
           function update() {
+              if(step == 1) {
+                step = 2;
+              } else { 
+                step = 1;
+              }
               document.getElementById("character").style.left = leftValue+"px";
               document.getElementById("character").style.top = topValue+"px";
+              document.getElementById("character").style.backgroundImage = "url('img/"+direction+step+".png')";
           }
 
           function verifyWithin(original, offset, min=0, max=500) {
@@ -24,15 +31,19 @@
               console.log(e);
               if(e.keyCode == 37) {
                   leftValue = verifyWithin(leftValue, -10);
+                  direction = 'left';
               }
               else if (e.keyCode == 39) {
                   leftValue = verifyWithin(leftValue, 10);
+                  direction = 'right';
               }
               else if (e.keyCode == 40) {
                   topValue = verifyWithin(topValue, 10);
+                  direction = 'down';
               }
               else if (e.keyCode == 38) {
                   topValue = verifyWithin(topValue, -10);
+                  direction = 'top';
               }
               update();
           }
