added the height to the subArticle and deleted the height from the subarticle and then in worked.

--- a/Modernize/index.html
+++ b/Modernize/index.html
@@ -25,6 +25,17 @@
     <main>
         <img src="images/main_pic.png" alt="main picture">
         <div class="divider"></div>
+        <article>
+            <article class="subArticle">
+                <img src="images/content_icon1.png" alt="">
+                <div class="subText">
+                    <h3>Ridiculous Ornare</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
+                </div>
+
+            </article>
+
+        </article>
     </main>
     <footer>
 
