ready to validate.

--- a/Modernize/index.html
+++ b/Modernize/index.html
@@ -16,29 +16,89 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Blog >></a>
-        <a href="#">Portfolio >></a>
-        <a href="#">ShortCodees >></a>
-        <a href="#">Features >></a>
+        <a href="#">Blog »</a>
+        <a href="#">Portfolio »</a>
+        <a href="#">ShortCodees »</a>
+        <a href="#">Features »</a>
         <a href="#">Contact</a>
     </nav>
     <main>
         <img src="images/main_pic.png" alt="main picture">
         <div class="divider"></div>
-        <article>
+        <article class="articleGroup">
             <article class="subArticle">
                 <img src="images/content_icon1.png" alt="">
                 <div class="subText">
                     <h3>Ridiculous Ornare</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
                 </div>
+            </article>
+            
+            <article class="subArticle">
+                <img src="images/content_icon2.png" alt="">
+                <div class="subText">
+                    <h3>Ridiculous Ornare</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
+                </div>
+            </article>
 
+            <article class="subArticle">
+                <img src="images/content_icon3.png" alt="">
+                <div class="subText">
+                    <h3>Ridiculous Ornare</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
+                </div>
+            </article>
+
+            <article class="subArticle">
+                <img src="images/content_icon4.png" alt="">
+                <div class="subText">
+                    <h3>Ridiculous Ornare</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
+                </div>
             </article>
 
         </article>
+        <div class="buySection">
+            <article>
+                <h2>Fusce whatever title sdflkjsdflkjjjd</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, odio nesciunt! Modi, ratione numquam? Aperiam, voluptatibus? Vero nulla at qui corrupti, quibusdam magni expedita quae, perspiciatis esse deserunt doloribus provident.</p>
+            </article>
+            <button>Buy Now</button>
+        </div>
     </main>
     <footer>
+        <div class="footerTop">
+            <h2>Portfolio</h2>
+            <a href="#">View All Projects ⟶</a>
+        </div>
+        <div class="portfolios">
+            <article>
+                <img src="images/portfolio1.png" alt="ballarina">
+                <h4>Built-in Shortcode</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit velit perferendis nisi debitis, nobis, accusantium placeat minus eligendi veritatis exercitationem reprehenderit! Sapiente voluptates quod maiores fugit esse amet cupiditate minima.</p>
+            </article>
 
+            <article>
+                 <img src="images/portfolio2.png" alt="ballarina">
+                <h4>Built-in Shortcode</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit velit perferendis nisi debitis, nobis, accusantium placeat minus eligendi veritatis exercitationem reprehenderit! Sapiente voluptates quod maiores fugit esse amet cupiditate minima.</p>
+            </article>
+
+            <article>
+                <img src="images/portfolio3.png" alt="ballarina">
+                <h4>Built-in Shortcode</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit velit perferendis nisi debitis, nobis, accusantium placeat minus eligendi veritatis exercitationem reprehenderit! Sapiente voluptates quod maiores fugit esse amet cupiditate minima.</p>
+            </article>
+
+            <article>
+                <img src="images/portfolio4.png" alt="ballarina">
+                <h4>Built-in Shortcode</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit velit perferendis nisi debitis, nobis, accusantium placeat minus eligendi veritatis exercitationem reprehenderit! Sapiente voluptates quod maiores fugit esse amet cupiditate minima.</p>
+            </article>
+        </div>
+        <a href="#" class="absoluteBottom">Back To Top</a>
     </footer>
+    
 </body>
 </html>
