validated except for >> chars.

--- a/Modernize/index.html
+++ b/Modernize/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
     <main>
         <img src="images/main_pic.png" alt="main picture">
         <div class="divider"></div>
-        <article class="articleGroup">
+        <div class="articleGroup">
             <article class="subArticle">
                 <img src="images/content_icon1.png" alt="">
                 <div class="subText">
@@ -57,8 +57,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, natus sequi reiciendis, aut laborum earum accusantium laudantium quidem ipsa optio </p>
                 </div>
             </article>
-
-        </article>
+        </div>
         <div class="buySection">
             <article>
                 <h2>Fusce whatever title sdflkjsdflkjjjd</h2>
